[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/menus/settings/Settings.gd" type="Script" id=1]
[ext_resource path="res://game/menus/settings/General.gd" type="Script" id=2]
[ext_resource path="res://game/menus/settings/alias/AliasMenu.gd" type="Script" id=3]
[ext_resource path="res://game/menus/settings/alias/AliasSubTab.gd" type="Script" id=4]
[ext_resource path="res://game/menus/settings/profiles/Profiles.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameTheme.theme" type="Theme" id=6]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0

[node name="Back" type="Button" parent="PanelContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 39.0
margin_right = -4.0
margin_bottom = -4.0
text = "Back to Main Menu"

[node name="General" type="Control" parent="PanelContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="Scroll" type="ScrollContainer" parent="PanelContainer/TabContainer/General"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 225.0
margin_right = -225.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="PanelContainer/TabContainer/General/Scroll"]
margin_right = 808.0
margin_bottom = 187.0
size_flags_horizontal = 3
custom_constants/separation = 25

[node name="RevealSource" type="HBoxContainer" parent="PanelContainer/TabContainer/General/Scroll/List"]
margin_right = 552.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/TabContainer/General/Scroll/List/RevealSource"]
margin_top = 3.0
margin_right = 274.0
margin_bottom = 17.0
hint_tooltip = "Set when the game tells you of the source for the current entry."
mouse_filter = 1
size_flags_horizontal = 3
text = "Reveal Source: "
align = 2

[node name="OptionButton" type="OptionButton" parent="PanelContainer/TabContainer/General/Scroll/List/RevealSource"]
margin_left = 278.0
margin_right = 552.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Never"
items = [ "Never", null, false, 0, null, "When Solved", null, false, 1, null, "Always", null, false, 2, null ]
selected = 0

[node name="RandMode" type="HBoxContainer" parent="PanelContainer/TabContainer/General/Scroll/List"]
margin_top = 45.0
margin_right = 552.0
margin_bottom = 65.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/TabContainer/General/Scroll/List/RandMode"]
margin_top = 3.0
margin_right = 274.0
margin_bottom = 17.0
hint_tooltip = "You can set the game to choose a random category/source, then an entry from that. Useful if your entries heavily feature some over others."
mouse_filter = 1
size_flags_horizontal = 3
text = "Randomize Mode: "
align = 2

[node name="OptionButton" type="OptionButton" parent="PanelContainer/TabContainer/General/Scroll/List/RandMode"]
margin_left = 278.0
margin_right = 552.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Random"
items = [ "Random", null, false, 0, null, "By Category", null, false, 1, null, "By Source", null, false, 2, null ]
selected = 0

[node name="Refresh" type="HBoxContainer" parent="PanelContainer/TabContainer/General/Scroll/List"]
margin_top = 90.0
margin_right = 552.0
margin_bottom = 114.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/TabContainer/General/Scroll/List/Refresh"]
margin_top = 5.0
margin_right = 274.0
margin_bottom = 19.0
hint_tooltip = "The game prevents repeat entries. When this many entries are left, all entries will be made available again."
mouse_filter = 1
size_flags_horizontal = 3
text = "Refresh Entries at: "
align = 2

[node name="SpinBox" type="SpinBox" parent="PanelContainer/TabContainer/General/Scroll/List/Refresh"]
margin_left = 278.0
margin_right = 552.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = 5.0
value = 5.0

[node name="Save" type="Button" parent="PanelContainer/TabContainer/General/Scroll/List"]
margin_top = 139.0
margin_right = 552.0
margin_bottom = 159.0
text = "Save"

[node name="Alias" type="TabContainer" parent="PanelContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
tab_align = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Categories" type="Control" parent="PanelContainer/TabContainer/Alias"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 39.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 4 )

[node name="H" type="HSplitContainer" parent="PanelContainer/TabContainer/Alias/Categories"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Import" type="ScrollContainer" parent="PanelContainer/TabContainer/Alias/Categories/H"]
margin_right = 600.0
margin_bottom = 514.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.57

[node name="VBox" type="VBoxContainer" parent="PanelContainer/TabContainer/Alias/Categories/H/Import"]
margin_right = 600.0
size_flags_horizontal = 3

[node name="View" type="ScrollContainer" parent="PanelContainer/TabContainer/Alias/Categories/H"]
margin_left = 612.0
margin_right = 994.0
margin_bottom = 514.0
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="PanelContainer/TabContainer/Alias/Categories/H/View"]

[node name="Sources" type="Control" parent="PanelContainer/TabContainer/Alias"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 4 )

[node name="H" type="HSplitContainer" parent="PanelContainer/TabContainer/Alias/Sources"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Import" type="ScrollContainer" parent="PanelContainer/TabContainer/Alias/Sources/H"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.57

[node name="VBox" type="VBoxContainer" parent="PanelContainer/TabContainer/Alias/Sources/H/Import"]
margin_right = 40.0
size_flags_horizontal = 3

[node name="View" type="ScrollContainer" parent="PanelContainer/TabContainer/Alias/Sources/H"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="PanelContainer/TabContainer/Alias/Sources/H/View"]

[node name="Profiles" parent="PanelContainer/TabContainer" instance=ExtResource( 5 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Legal" type="ScrollContainer" parent="PanelContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/TabContainer/Legal"]
margin_right = 702.0
margin_bottom = 1295.0

[node name="GPLLabel" type="Label" parent="PanelContainer/TabContainer/Legal/VBoxContainer"]
margin_right = 462.0
margin_bottom = 218.0
text = "Copyright (C) 2020 \"zacryol\" (https://gitlab.com/zacryol)
This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>."

[node name="MITLabel" type="Label" parent="PanelContainer/TabContainer/Legal/VBoxContainer"]
margin_top = 222.0
margin_right = 462.0
margin_bottom = 678.0
text = "

    This game uses Godot Engine, available under the following license:

    Copyright (c) 2007-2020 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2020 Godot Engine contributors.

    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
"
autowrap = true

[node name="FreeType" type="Label" parent="PanelContainer/TabContainer/Legal/VBoxContainer"]
margin_top = 682.0
margin_right = 462.0
margin_bottom = 713.0
text = "Portions of this software are copyright © 2020 The FreeType Project (www.freetype.org). All rights reserved."
autowrap = true
[connection signal="pressed" from="PanelContainer/TabContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="item_selected" from="PanelContainer/TabContainer/General/Scroll/List/RevealSource/OptionButton" to="PanelContainer/TabContainer/General" method="_on_source_option_selected"]
[connection signal="item_selected" from="PanelContainer/TabContainer/General/Scroll/List/RandMode/OptionButton" to="PanelContainer/TabContainer/General" method="_on_rand_option_selected"]
[connection signal="value_changed" from="PanelContainer/TabContainer/General/Scroll/List/Refresh/SpinBox" to="PanelContainer/TabContainer/General" method="_on_Refresh_value_changed"]
[connection signal="pressed" from="PanelContainer/TabContainer/General/Scroll/List/Save" to="PanelContainer/TabContainer/General" method="_on_Save_pressed"]
[connection signal="alias_created" from="PanelContainer/TabContainer/Alias/Categories" to="PanelContainer/TabContainer/Profiles" method="_on_alias_created"]
[connection signal="alias_created" from="PanelContainer/TabContainer/Alias/Sources" to="PanelContainer/TabContainer/Profiles" method="_on_alias_created"]
